--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-    "name": "draw",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "node": "node app.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.16.4",
-        "socket.io": "^2.1.1"
-    }
+  "name": "draw",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node": "node app.js",
+    "start": "node app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asaldivar18/tankshooter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/asaldivar18/tankshooter/issues"
+  },
+  "homepage": "https://github.com/asaldivar18/tankshooter#readme",
+  "description": ""
 }
