--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.18.3",
         "express": "^4.16.4",
+        "firebase": "^5.5.8",
         "nodemon": "^1.18.5",
         "socket.io": "^2.1.1"
     },
