--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.16.4",
         "firebase": "^5.5.8",
         "nodemon": "^1.18.5",
+        "path": "^0.12.7",
         "socket.io": "^2.1.1"
     },
     "devDependencies": {},
